Artigo - Adiciona Trabalhos relacionados (#4)
* docs: adds related work

inicio dos trabalhos relacionados, preciso lapidar ainda os outros
pontos da lista

* docs: adjusts references and adds related works

* docs: adjust text

--- a/article/references.bib
+++ b/article/references.bib
@@ -17,7 +17,6 @@ of {{Unmanned Aerial Systems}} ({{RED UAS}})},
 author = {Capit{\'a}n, Carlos and Casta{\~n}o, {\'A}ngel R. and Capit{\'a}n, Jes{\'u}s
 and Ollero, An{\'i}bal},
 year = {2019},
-month = nov,
 pages = {1--8},
 doi = {10.1109/REDUAS47371.2019.8999673},
 urldate = {2025-07-23}
@@ -31,7 +30,6 @@ booktitle = {{{ICC}} 2024 - {{IEEE International Conference}} on
 {{Communications}}},
 author = {{El alami}, Hassan and Rawat, Danda B.},
 year = {2024},
-month = jun,
 pages = {1933--1938},
 issn = {1938-1883},doi = {10.1109/ICC51166.2024.10622524},
 urldate = {2025-07-23}
@@ -43,7 +41,6 @@ booktitle = {2024 9th {{International Conference}} on {{Computer Science}} and
 {{Engineering}} ({{UBMK}})},
 author = {{\.I}{\c s}leyen, Emre and Bahtiyar, {\c S}erif},
 year = {2024},
-month = oct,
 pages = {500--505},
 issn = {2521-1641},
 doi = {10.1109/UBMK63289.2024.10773593},
@@ -62,7 +59,6 @@ title = {Machine {{Learning Modeling}} of {{GPS Features}} with {{Applications}}
 author = {Nayfeh, Mohammad and Li, Yuchen and Shamaileh, Khair Al and
 Devabhaktuni, Vijay and Kaabouch, Naima},
 year = {2023},
-month = mar,
 journal = {Computers \& Security},
 volume = {126},
 pages = {103085},
@@ -100,7 +96,6 @@ booktitle = {2023 11th {{International Symposium}} on {{Digital Forensics}} and
 {{Security}} ({{ISDFS}})},
 author = {Srinivasan S, Prasanna and Sathyadevan, Shiju},
 year = {2023},
-month = may,
 pages = {1--4},
 doi = {10.1109/ISDFS58141.2023.10131729},
 urldate = {2025-07-23}
@@ -113,7 +108,6 @@ booktitle = {2021 {{International Wireless Communications}} and {{Mobile
 Computing}} ({{IWCMC}})},
 author = {Titouna, Chafiq and {Na{\"i}t-Abdesselam}, Farid},
 year = {2021},
-month = jun,
 pages = {819--824},
 issn = {2376-6506},
 doi = {10.1109/IWCMC51323.2021.9498734},
@@ -127,7 +121,6 @@ booktitle = {2023 {{International Conference}} on {{Software}},
 {{Telecommunications}} and {{Computer Networks}} ({{SoftCOM}})},
 author = {Wagner, Matheus and Fr{\"o}hlich, Ant{\^o}nio Augusto},
 year = {2023},
-month = sep,
 pages = {1--6},
 issn = {1847-358X},
 doi = {10.23919/SoftCOM58365.2023.10271629},
@@ -192,7 +185,6 @@ for Space-Based Positioning, Navigation, and Timing (PNT) },
   title   = {Mulher é atingida por drone durante show e precisa passar por cirurgia no DF},
   year    = {2022},
   url     = {https://g1.globo.com/df/distrito-federal/noticia/2022/07/26/mulher-e-atingida-por-drone-durante-show-e-precisa-passar-por-cirurgia-no-df.ghtml},
-  note = {Disponível em: \url{https://g1.globo.com/df/distrito-federal/noticia/2022/07/26/mulher-e-atingida-por-drone-durante-show-e-precisa-passar-por-cirurgia-no-df.ghtml}},
   urldate = {2025-07-24},
 }
 
@@ -200,7 +192,7 @@ for Space-Based Positioning, Navigation, and Timing (PNT) },
   author  = {G1},
   title   = {Drone cai em cima de mulher durante show de Luan Santana na Expogrande},
   year    = {2022},
-  note     = {Disponível em: \url{https://g1.globo.com/pop-arte/noticia/2022/05/02/drone-cai-em-cima-de-mulher-durante-show-de-luan-santana-na-expogrande.ghtml}. Acesso em: 24 jul. 2025},
+  url     = {https://g1.globo.com/pop-arte/noticia/2022/05/02/drone-cai-em-cima-de-mulher-durante-show-de-luan-santana-na-expogrande.ghtml},
   urldate = {2025-07-24}
 }
 
@@ -209,7 +201,6 @@ for Space-Based Positioning, Navigation, and Timing (PNT) },
   title   = {Cinco acidentes causados por drones são registrados no Oeste},
   year    = {2022},
   url     = {https://bandnewsfmcuritiba.com/cinco-acidentes-causados-por-drones-sao-registrados-no-oeste/},
-  note = {Disponível em: \url{https://bandnewsfmcuritiba.com/cinco-acidentes-causados-por-drones-sao-registrados-no-oeste/}. Acesso em: 24 jul. 2025},
   urldate = {2025-07-24}
 }
 
@@ -218,7 +209,6 @@ for Space-Based Positioning, Navigation, and Timing (PNT) },
   title   = {Copel registra cinco acidentes com rede elétrica pelo uso de drones pulverizadores no Paraná},
   year    = {2022},
   url     = {https://www.bemparana.com.br/noticias/parana/copel-registra-cinco-acidentes-com-rede-eletrica-pelo-uso-de-drones-pulverizadores-no-parana/},
-  note = {Disponível em: \url{https://www.bemparana.com.br/noticias/parana/copel-registra-cinco-acidentes-com-rede-eletrica-pelo-uso-de-drones-pulverizadores-no-parana/}. Acesso em: 24 jul. 2025},
   urldate = {2025-07-24}
 }
 
@@ -227,7 +217,6 @@ for Space-Based Positioning, Navigation, and Timing (PNT) },
   title   = {Drone da FAB que ajudava no monitoramento cai no Rio Grande do Sul},
   year    = {2022},
   url     = {https://veja.abril.com.br/tecnologia/drone-da-fab-que-ajudava-no-monitoramento-cai-no-rio-grande-do-sul/},
-  note = {Disponível em: \url{https://veja.abril.com.br/tecnologia/drone-da-fab-que-ajudava-no-monitoramento-cai-no-rio-grande-do-sul/}. Acesso em: 24 jul. 2025},
   urldate = {2025-07-24}
 }
 @misc{forbes2020,
@@ -235,7 +224,6 @@ for Space-Based Positioning, Navigation, and Timing (PNT) },
   title   = {Investigation finds GPS interference caused UK survey drone crash},
   year    = {2020},
   url     = {https://www.forbes.com/sites/davidhambling/2020/08/10/investigation-finds-gps-interference-caused-uk-survey-drone-crash/?sh=57b389bd534a},
-  note = {Disponível em: \url{https://www.forbes.com/sites/davidhambling/2020/08/10/investigation-finds-gps-interference-caused-uk-survey-drone-crash/?sh=57b389bd534a}. Acesso em: 24 jul. 2025},
   urldate = {2025-07-24}
 }
 @misc{australianaviation2022,
@@ -243,8 +231,33 @@ for Space-Based Positioning, Navigation, and Timing (PNT) },
   title   = {Electromagnetic interference behind Darling Harbour drone crash},
   year    = {2022},
   url     = {https://australianaviation.com.au/2022/06/electromagnetic-interference-behind-darling-harbour-drone-crash/},
-  note = {Disponível em: \url{https://australianaviation.com.au/2022/06/electromagnetic-interference-behind-darling-harbour-drone-crash/}. Acesso em: 24 jul. 2025},
   urldate = {2025-07-24}
+}
+
+@inproceedings{panice2017,
+  author={Panice, G. and Luongo, S. and Gigante, G. and Pascarella, D. and Di Benedetto, C. and Vozella, A. and Pescapè, A.},
+  booktitle={2017 23rd International Conference on Automation and Computing (ICAC)}, 
+  title={A SVM-based detection approach for GPS spoofing attacks to UAV}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={1-11},
+  keywords={Global Positioning System;Unmanned aerial vehicles;Aircraft;Sensors;Security;Payloads;Accelerometers;RPAS;UAV;GPS spoofing;Cyber attack;Security},
+  doi={10.23919/IConAC.2017.8081999}}
+
+@article{cnn2023,
+author = {Sun, Yichen and Yu, Mingxin and Wang, Luyang and Li, Tianfang and
+Dong, Mingli},
+title = {A Deep-Learning-Based GPS Signal Spoofing Detection Method for Small
+UAVs},
+journal = {Drones},
+volume = {7},
+year = {2023},
+number = {6},
+article-number = {370},
+url = {https://www.mdpi.com/2504-446X/7/6/370},
+issn = {2504-446X},
+doi = {10.3390/drones7060370}
 }
 
 @misc{IBM02025,
