ref: ajuste de referencia
removida referencias nao utilizadas

--- a/article/references.bib
+++ b/article/references.bib
@@ -7,8 +7,7 @@
   number={},
   pages={0649-0653},
   keywords={Radio frequency;Navigation;Memory management;Security;Random forests;Global Positioning System;Software radio;UAS;GPS Spoofing Attacks;Detection Tech-niques;Machine Learning},
-  doi={10.1109/UEMCON53757.2021.9666744}
-}
+  doi={10.1109/UEMCON53757.2021.9666744}}
 
 @inproceedings{capitanFrameworkHandleThreats2019,
 title = {A Framework to Handle Threats for {{UAS}} Operating in the {{U-space}}},
@@ -19,8 +18,7 @@ and Ollero, An{\'i}bal},
 year = {2019},
 pages = {1--8},
 doi = {10.1109/REDUAS47371.2019.8999673},
-urldate = {2025-07-23}
-}
+urldate = {2025-07-23}}
 
 @inproceedings{elalamiDroneDefGANtGenerativeAIBased2024,
 title = {{{DroneDefGANt}}: {{A Generative AI-Based Approach}} for {{Detecting UAS
@@ -31,9 +29,9 @@ booktitle = {{{ICC}} 2024 - {{IEEE International Conference}} on
 author = {{El alami}, Hassan and Rawat, Danda B.},
 year = {2024},
 pages = {1933--1938},
-issn = {1938-1883},doi = {10.1109/ICC51166.2024.10622524},
-urldate = {2025-07-23}
-}
+issn = {1938-1883},
+doi = {10.1109/ICC51166.2024.10622524},
+urldate = {2025-07-23}}
 
 @inproceedings{isleyenGPSSpoofingDetection2024,
 title = {{{GPS Spoofing Detection}} on {{Autonomous Vehicles}} with {{XGBoost}}},
@@ -45,13 +43,7 @@ pages = {500--505},
 issn = {2521-1641},
 doi = {10.1109/UBMK63289.2024.10773593},
 urldate = {2025-07-23},
-langid = {american},
-keywords = {/unread,Accuracy,autonomous vehicles,cybersecurity,Global
-Positioning System,GPS spoofing detection,machine learning,Machine
-learning,Pattern recognition,Real-time
-systems,Resilience,Robustness,Security,Training,Transportation}
-}
-
+langid = {american}}
 
 @article{nayfehMachineLearningModeling2023,
 title = {Machine {{Learning Modeling}} of {{GPS Features}} with {{Applications}} to
@@ -66,8 +58,7 @@ publisher = {Elsevier BV},
 issn = {0167-4048},
 doi = {10.1016/j.cose.2022.103085},
 copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
-langid = {english},
-}
+langid = {english}}
 
 @article{sheGPSSpoofingAttack2024,
 title = {{{GPS Spoofing Attack Recognition}} for {{UAVs With Limited Samples}}},
@@ -84,11 +75,7 @@ doi = {10.1109/jiot.2024.3465528},
 urldate = {2025-07-23},
 copyright = {https://ieeexplore.ieee.org/Xplorehelp/downloads/license
 information/IEEE.html},
-langid = {english},
-keywords = {Accuracy,AdaBoost-CNN algorithm,Autonomous aerial
-vehicles,Doppler shift,Feature extraction,Global Positioning System,GPS spoofing
-attack,limited samples,Receivers,Satellites,spoofing attack recognition}
-}
+langid = {english}}
 
 @inproceedings{srinivasansGPSSpoofingDetection2023,
 title = {{{GPS Spoofing Detection}} in {{UAV Using Motion Processing Unit}}},
@@ -98,8 +85,7 @@ author = {Srinivasan S, Prasanna and Sathyadevan, Shiju},
 year = {2023},
 pages = {1--4},
 doi = {10.1109/ISDFS58141.2023.10131729},
-urldate = {2025-07-23}
-}
+urldate = {2025-07-23}}
 
 @inproceedings{titounaLightweightSecurityTechnique2021,
 title = {A {{Lightweight Security Technique For Unmanned Aerial Vehicles Against
@@ -111,8 +97,7 @@ year = {2021},
 pages = {819--824},
 issn = {2376-6506},
 doi = {10.1109/IWCMC51323.2021.9498734},
-urldate = {2025-07-23}
-}
+urldate = {2025-07-23}}
 
 @inproceedings{wagnerSecuringCyberPhysicalSystems2023,
 title = {Securing {{Cyber-Physical Systems Against GPS Spoofing Attacks Using
@@ -124,30 +109,28 @@ year = {2023},
 pages = {1--6},
 issn = {1847-358X},
 doi = {10.23919/SoftCOM58365.2023.10271629},
-urldate = {2025-07-23}
-}
+urldate = {2025-07-23}}
 
 @misc{aissou2022dataset,
   author       = {Aissou, Ghilas},
   title        = {{A DATASET for GPS Spoofing Detection on Unmanned Aerial System}},
   year         = {2022},
   howpublished = {Mendeley Data, V3},
-  doi          = {10.17632/z7dj3yyzt8.3}
-}
+  doi          = {10.17632/z7dj3yyzt8.3}}
 
 @techreport{dialogos,
     author = "Dialogos Uniao Europeia Brasil",
     title = "Estudo sobre a Indústria Brasileira e Europeia de Veículos aéreos não tripulados",
     institution = "Dialogos Uniao Europeia Brasil",
     year = 2025,
-    DOI = "https://www.gov.br/mdic/pt-br/images/publicacaoa_DRONES-20161130-20012017-web.pdf"
+    doi = "https://www.gov.br/mdic/pt-br/images/publicacaoa_DRONES-20161130-20012017-web.pdf",
 }
 
 @article{khan,
     author = { Amina Khan and Sumeet Gupta and Sachin Kumar Gupt },
     title = "Emerging UAV technology for disaster detection, mitigation, response, and preparedness",
     journal = "Journal of fields robotics",
-    year = 2022
+    year = 2022,
 }
 
 @article{lester,
@@ -159,9 +142,7 @@ and Nelson A. Roso },
     journal = "Journal Aerospacial Tecnology Managment",
     year = 2018,
     page = 10,
-    DOI = "10.5028/jatm.v10.870"
-}
-
+    doi = {10.5028/jatm.v10.870}}
 @misc{GPSGOV,
   author = {GPS},
   title = {Information for Policymakers from the National Coordination Office
@@ -169,73 +150,16 @@ for Space-Based Positioning, Navigation, and Timing (PNT) },
   howpublished = {Global Positioning System Tracker},
   year = {2025},
   url = {https://www.gps.gov/congress/newsletter/2012/10.pdf},
-  urldate = {2025-07-23}
-}
-
+  urldate = {2025-07-23}}
 @article{Spoofing,
   author = {Jafarnia-Jahromi, Ali and Broumandan, Ali and  Nielsen, J.and Lachapelle, Gérard},
   title = {GPS Vulnerability to Spoofing Threats and a Review of Antispoofing Techniques},
   journal = {International Journal of Navigation and Observation},
   year = {2012},
-  DOI = "10.1155/2012/127072"
-}
-
-@misc{g1drone2022a,
-  author  = {G1},
-  title   = {Mulher é atingida por drone durante show e precisa passar por cirurgia no DF},
-  year    = {2022},
-  url     = {https://g1.globo.com/df/distrito-federal/noticia/2022/07/26/mulher-e-atingida-por-drone-durante-show-e-precisa-passar-por-cirurgia-no-df.ghtml},
-  urldate = {2025-07-24},
-}
-
-@misc{g1drone2022b,
-  author  = {G1},
-  title   = {Drone cai em cima de mulher durante show de Luan Santana na Expogrande},
-  year    = {2022},
-  url     = {https://g1.globo.com/pop-arte/noticia/2022/05/02/drone-cai-em-cima-de-mulher-durante-show-de-luan-santana-na-expogrande.ghtml},
-  urldate = {2025-07-24}
-}
-
-@misc{bandnews2022,
-  author  = {BandNews},
-  title   = {Cinco acidentes causados por drones são registrados no Oeste},
-  year    = {2022},
-  url     = {https://bandnewsfmcuritiba.com/cinco-acidentes-causados-por-drones-sao-registrados-no-oeste/},
-  urldate = {2025-07-24}
-}
-
-@misc{bemparana2022,
-  author  = {Bem Paraná},
-  title   = {Copel registra cinco acidentes com rede elétrica pelo uso de drones pulverizadores no Paraná},
-  year    = {2022},
-  url     = {https://www.bemparana.com.br/noticias/parana/copel-registra-cinco-acidentes-com-rede-eletrica-pelo-uso-de-drones-pulverizadores-no-parana/},
-  urldate = {2025-07-24}
-}
-
-@misc{veja2022,
-  author  = {Veja},
-  title   = {Drone da FAB que ajudava no monitoramento cai no Rio Grande do Sul},
-  year    = {2022},
-  url     = {https://veja.abril.com.br/tecnologia/drone-da-fab-que-ajudava-no-monitoramento-cai-no-rio-grande-do-sul/},
-  urldate = {2025-07-24}
-}
-@misc{forbes2020,
-  author  = {David Hambling},
-  title   = {Investigation finds GPS interference caused UK survey drone crash},
-  year    = {2020},
-  url     = {https://www.forbes.com/sites/davidhambling/2020/08/10/investigation-finds-gps-interference-caused-uk-survey-drone-crash/?sh=57b389bd534a},
-  urldate = {2025-07-24}
-}
-@misc{australianaviation2022,
-  author  = {Australian Aviation},
-  title   = {Electromagnetic interference behind Darling Harbour drone crash},
-  year    = {2022},
-  url     = {https://australianaviation.com.au/2022/06/electromagnetic-interference-behind-darling-harbour-drone-crash/},
-  urldate = {2025-07-24}
-}
+  doi = {10.1155/2012/127072}}
 
 @inproceedings{panice2017,
-  author={Panice, G. and Luongo, S. and Gigante, G. and Pascarella, D. and Di Benedetto, C. and Vozella, A. and Pescapè, A.},
+  author={Panice, G. and Luongo, S. and Gigante, G. and Pascarella, D. and Di Benedetto, C. and Vozella, A. and Pescap\è, A.},
   booktitle={2017 23rd International Conference on Automation and Computing (ICAC)}, 
   title={A SVM-based detection approach for GPS spoofing attacks to UAV}, 
   year={2017},
@@ -244,6 +168,13 @@ for Space-Based Positioning, Navigation, and Timing (PNT) },
   pages={1-11},
   keywords={Global Positioning System;Unmanned aerial vehicles;Aircraft;Sensors;Security;Payloads;Accelerometers;RPAS;UAV;GPS spoofing;Cyber attack;Security},
   doi={10.23919/IConAC.2017.8081999}}
+
+@misc{IBM02025,
+  author  = {IBM},
+  title   = {What is principal component analysis (PCA)? },
+  year    = {2025},
+  url     = {https://www.ibm.com/think/topics/principal-component-analysis},
+  urldate = {2025-07-31}}
 
 @article{cnn2023,
 author = {Sun, Yichen and Yu, Mingxin and Wang, Luyang and Li, Tianfang and
@@ -257,13 +188,4 @@ number = {6},
 article-number = {370},
 url = {https://www.mdpi.com/2504-446X/7/6/370},
 issn = {2504-446X},
-doi = {10.3390/drones7060370}
-}
-
-@misc{IBM02025,
-  author  = {IBM},
-  title   = {What is principal component analysis (PCA)? },
-  year    = {2025},
-  url     = {https://www.ibm.com/think/topics/principal-component-analysis},
-  urldate = {2025-07-31}
-}
+doi = {10.3390/drones7060370}}
