--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -149,7 +149,7 @@ O \textit{dataset} que será utilizado como base de dados é o \textit{Mendeley 
 contém aproximadamente 500,000 dados, no artigo escolhido de \cite{Aissou2021} não 
 possui uma citação do \textit{dataset} usado para o treinamento dos modelos, 
 então para as análises decorrentes deste artigo será utilizada essa fonte de dados 
-provida pelos autores do artigo. 
+simplificada e disponibilizada pelos autores do artigo. 
 De acordo com o artigo de \cite{Aissou2021}, os ataques do tipo
 \textit{spoofing} podem ser classificados em: simples,
 intermediários e sofisticados.
@@ -172,9 +172,16 @@ que utilizou a implementações de algoritmos como:
 
 A proposta de mudança deste artigo é avaliar outros modelos
 para a classificação de possíveis ataques de \textit{spoofing} 
-a sinais de GPS, avaliando o desempenho dos algoritmos:
-(i) Naive Bayes, (ii) K-NN, (iii) Extreme Random Forest,
-(iv) Random Forest e (v)  Gaussian Naive Bayes.
+a sinais de GPS, com enfoque em algoritmos que não são baseados em árvore, sendo estes:
+(i) \textit{Naive Bayes}, (ii) \textit{K-NN} e (iii) \textit{Gaussian Naive Bayes}.
+
+Além da reimplementação do algoritmo (iv) \textit{Random Forest}
+que foi utilizado no artigo \cite{Aissou2021} e obteve o pior desempenho no comparativo.
+Com base no desempenho do \textit{Random Forest}, será feita a implementação do algoritmo 
+(v) \textit{Extremely randomized trees}, um modelo melhorado do \textit{Random Forest},
+que se diferem pelo fato de no \textit{Extremely randomized trees}
+não existir a fase de \textit{bagging} e no momento da separação dos nós,
+esta escolha é feita aleatoriamente. \cite{geurtsExtremelyRandomizedTrees2006}
 
 Serão analisados a acurácia, 
 precisão e a quantidade de falsos negativos. 
