--- a/article/references.bib
+++ b/article/references.bib
@@ -189,3 +189,17 @@ article-number = {370},
 url = {https://www.mdpi.com/2504-446X/7/6/370},
 issn = {2504-446X},
 doi = {10.3390/drones7060370}}
+
+@article{geurtsExtremelyRandomizedTrees2006,
+  title = {Extremely Randomized Trees},
+  author = {Geurts, Pierre and Ernst, Damien and Wehenkel, Louis},
+  date = {2006},
+  journaltitle = {Machine Learning},
+  shortjournal = {Mach Learn},
+  volume = {63},
+  number = {1},
+  pages = {3--42},
+  issn = {0885-6125, 1573-0565},
+  doi = {10.1007/s10994-006-6226-1},
+  url = {http://link.springer.com/10.1007/s10994-006-6226-1},
+  urldate = {2025-08-06}}
