docs: adds spoofing meaning

--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -84,12 +84,11 @@ esses sinais podem ser criptografados ou não \cite {lester}.
 Sendo os não criptografados mais suscetíveis a ataques conhecidos como
 \textit{Spoofing} de GPS \cite{srinivasansGPSSpoofingDetection2023}.
 
-\begin{comment}
-  Falar o que é Spoofing de GPS antes de falar dos tipos. Bem rapidinho.
-\end{comment}
-
-% Os ataques de \textit{spoofing} de GPS
-% são classificados em: simples, intermediários e sofisticados \cite{Aissou2021}.
+O ataque de \textit{spoofing} de GPS
+é caracterizado por um atacante que faz uso de antenas terrestres
+emitindo sinais falsos. \cite{Spoofing}
+Estes ataques são classificados em: simples,
+intermediários e sofisticados \cite{Aissou2021}.
 
 Para garantir um vôo seguro do VANT é essencial ter medidas
 para detecção dos ataques de \textit{Spoofing de GPS}.
